--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Home#index</h1>
-<p>ようこそ、<%= current_user.username %>さん！</p>
+<p>ようこそ、<%= current_user.email %>さん！</p>
+
+<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
