--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,37 @@
 <h1>Home#index</h1>
 <p>ようこそ、<%= current_user.email %>さん！</p>
 
-<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+<p>現在の残高: <%= current_user.current_balance %> 円</p>
 
-<div id="balance_chart" style="width: 900px; height: 500px;"></div>
+<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
 
 <%= link_to '取引を登録する', new_transaction_path %>
 
-<script>
+<%= link_to '取引履歴を見る', transactions_path %>
+
+<div id="balance_chart" style="width: 900px; height: 500px;"></div>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
   google.charts.load('current', {'packages':['corechart']});
   google.charts.setOnLoadCallback(drawChart);
 
   function drawChart() {
     var data = google.visualization.arrayToDataTable([
-      ['Date', 'Balance'],
-      // ここにデータを挿入
+      ['日付', '残高'],
+      <% current_user.transactions.each do |transaction| %>
+        ['<%= transaction.created_at.strftime("%Y-%m-%d") %>', <%= transaction.after_balance %>],
+      <% end %>
     ]);
 
     var options = {
-      title: 'Balance Over Time',
+      title: '残高の推移',
       curveType: 'function',
       legend: { position: 'bottom' }
     };
 
     var chart = new google.visualization.LineChart(document.getElementById('balance_chart'));
+
     chart.draw(data, options);
   }
 </script>
