--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,6 +1,21 @@
 <h1>Transactions#new</h1>
-<p>Find me in app/views/transactions/new.html.erb</p>
+<% if @transaction.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
+
+    <ul>
+    <% @transaction.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <%= form_with(model: @transaction, url: transactions_path, local: true) do |form| %>
+  <div>
+    <%= form.label :transaction_type, '取引タイプ' %><br>
+    <%= form.radio_button :transaction_type, 'deposit' %> 入金
+    <%= form.radio_button :transaction_type, 'payment' %> 出金
+  </div>
   <div>
     <%= form.label :amount, '金額' %>
     <%= form.number_field :amount %>
