--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,12 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :current_balance, "残高登録" %><br />
+    <%= f.number_field :current_balance %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
