--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,57 @@
  *= require_tree .
  *= require_self
  */
+header {
+	background-color: #f4f4f4;
+	border-bottom: 1px solid #808080;
+	margin: 0;
+}
+
+body {
+	margin: 0;
+	font-family: 'Zen Maru Gothic', serif;
+	background-color: #f4f4f4;
+	color: #333;
+	line-height: 1.6;
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	margin: 10px 20px;
+}
+  
+.title {
+	color: #333;
+	font-weight: bold;
+	font-size: 2.5em;
+	text-decoration: none;
+}
+
+.links a {
+    display: inline-block;
+    padding: 10px 15px;
+    margin: 10px 0;
+    background-color: #008b8b;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+.links a:hover {
+	background-color: #006666;
+}
+
+
+@media (max-width: 600px) {
+	nav {
+		flex-direction: column;
+	}
+	a{
+		font-size: 0.8em;
+	}
+}
+
+.content {
+	margin: 10px 30px;
+}
