--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,3 +67,23 @@ nav {
 .content {
 	margin: 10px 30px;
 }
+
+input[type="submit"] {
+    background-color: #008b8b;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+	font-family: 'Zen Maru Gothic', serif;
+}
+
+input[type="submit"]:hover {
+    background-color: #006666;
+}
+
+.flex {
+	display: flex;
+	margin-bottom: 10px;
+}
