--- a/app/assets/stylesheets/transaction.css
+++ b/app/assets/stylesheets/transaction.css
@@ -93,17 +93,18 @@ textarea {
 }
 
 input[type="submit"] {
-    background-color: #007bff;
+    background-color: #008b8b;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    font-family: 'Zen Maru Gothic', serif;
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #006666;
 }
 
 .transaction_date-field {
