--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 <%= form_with(model: @transaction, url: transactions_path, local: true) do |form| %>
   <div>
-    <%= form.label :transaction_type, '取引タイプ' %><br>
+    <%= form.label :transaction_type, '取引タイプ' %>
     <%= form.radio_button :transaction_type, 'deposit' %> 入金
     <%= form.radio_button :transaction_type, 'payment' %> 出金
   </div>
