--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -14,7 +14,7 @@
   <div>
     <%= form.label :transaction_type, '取引タイプ' %>
     <%= form.radio_button :transaction_type, 'deposit' %> 入金
-    <%= form.radio_button :transaction_type, 'payment' %> 出金
+    <%= form.radio_button :transaction_type, 'payment' %> 支払い
   </div>
   <div>
     <%= form.label :amount, '金額' %>
